--- a/VRChat/71/1013171.html
+++ b/VRChat/71/1013171.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "VjDelxEz1rtX5goArYLMgxmF3s8HQsZdLabOH5BOQ8M="></script>
+    "9rUvawfuVcRy2hvmCUaFNI6KCDO/o+QsgNCuzzI+Un4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"MCF チェーンソードV2","description":"【製品内容】\n・UnityPackage\n・利用規約\n\n【説明】\n光る！動く！！分厚いSci-fiチェーンソード。君の気に食わない奴をミンチにしてしまえ！あるいは木こりになるのもいいね？\n動画を下に埋め込んであるからそっちも見てね！\n\n※刃部分はシェーダーで光って動きます。\n※数値やワールドによっては激しい明滅をする可能性がありますのでご注意ください。\n\n\n三角面：449\n\n【免責事項】\n当モデルを使用した際、使用者側にいかなる不利益が発生した場合でも当方は一切責任を負いません。\n\n【禁止事項】\n・再配布（ゲームに組み込む・VRCのペデスタル等は許可）\n・政治的、差別的な用途への利用、又は過去にそのような用途に扱われた経歴のあるキャラクターへの利用","url":"https://booth.pm/ja/items/1013171","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/41721053-8f32-4b87-9b48-5fda7552cf1a/i/1013171/7f74a9cf-fb85-4868-a3a4-bcc4617bd708_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="VjDelxEz1rtX5goArYLMgxmF3s8HQsZdLabOH5BOQ8M="></script>
+    nonce="9rUvawfuVcRy2hvmCUaFNI6KCDO/o+QsgNCuzzI+Un4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,10 +161,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1013171/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              100
+                              99
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1013171/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              100
+                              99
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
