--- a/VRChat/21/1013021.html
+++ b/VRChat/21/1013021.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "CO0Q0V8kXE2MTJaG3gBXUFv1wx8DsTyHqsfLHlkaUAA="></script>
+    "4Z3NnEH1h/61jdp9Pr8D1uJ2ScZ6qOiGMRL9lR7yHDk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【瓶とか袋とか】VORPAL's Accesories Set【2020/02/20 V1.5 rollout】","description":"本商品はちょっとしたお出かけや旅のお供におすすめの、バッグや瓶、携帯短槍のセットです。ぜひ気軽にくっつけてお楽しみください。","url":"https://booth.pm/ja/items/1013021","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/fa82e193-d955-433b-bbee-7ce669773ee2/i/1013021/add1ff68-a715-4ce2-adf2-1f16be0144eb_base_resized.jpg"}
     </script>
@@ -86,16 +86,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="CO0Q0V8kXE2MTJaG3gBXUFv1wx8DsTyHqsfLHlkaUAA="></script>
+    nonce="4Z3NnEH1h/61jdp9Pr8D1uJ2ScZ6qOiGMRL9lR7yHDk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -123,6 +120,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -137,7 +136,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -180,7 +180,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1013021/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               167
@@ -195,14 +195,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1013021/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               167
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
