--- a/VRChat/71/1012871.html
+++ b/VRChat/71/1012871.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "gY9d9V2QPqb/ypyGH5KAwXzNR+js7criGT8gJujF4OI="></script>
+    "2HuW9yOE0kKBqwOckx2RyU4xb7iCCMPINPjN2St9CUI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】スーツケース","description":"■商品概要\nVRChatでの仕様を想定したスーツケースです。\nunitypackageを同梱しているので簡単に導入することが出来ます。\n△1728ポリゴン\n\n■使い方\n・ステッカーを貼りたい\nスーツケースには旅行先のステッカーを貼りがちですが、本データのテクスチャを変更するとそれが可能になります。\n『suitcase_AlbedoTransparency.png』を見ると気持ち左側にスーツケースの表面、裏面と思しき部分があると思われます。\nこちらは上が表面、下が裏面となっています。\n縫い目とベルトの影が書かれている部分以外に画像編集ソフトで貼りたいステッカーを貼り付けるとそれらしくなります。\nサンプルとしてステッカーを貼り付けた状態のテクスチャを用意しておりますので参考にしてください。\n\n■免責事項\n本データの利用によって生じたいかなる損害について、当方は一切の責任を負いません。\n\n■禁止事項\n・本データの再配布、転載を禁止します。\n・本データの作者を偽る行為を禁止します。\n・本データを用いた迷惑行為、他者を侮辱する行為\n・宗教的、政治的な用途での利用\n\n■許可事項\n・改変\n・本データを用いたアバターやワールドをVRChat上にアップロードする行為\n・本モデルを動画、静止画などの形で公共の場にアップロードすること\n\n上記規約は告知なく改変される可能性があります。\n\n■更新履歴\n2018/9/15: v1.0\n\n■連絡先\n黒金ニエロ\nbooth https://niello.booth.pm/\nホームページ https://niellochannel.wixsite.com/ojousama\nTwitter @Niello_virtual","url":"https://booth.pm/ja/items/1012871","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/8285a99a-4ad9-4431-9d71-56e82927bcf2/i/1012871/d8bb50dc-86c3-47a8-98d9-15b2e04592ca_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gY9d9V2QPqb/ypyGH5KAwXzNR+js7criGT8gJujF4OI="></script>
+    nonce="2HuW9yOE0kKBqwOckx2RyU4xb7iCCMPINPjN2St9CUI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1012871/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               205
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1012871/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               205
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
