--- a/VRChat/00/1009800.html
+++ b/VRChat/00/1009800.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "4BOD71MsKPVmbYpSxtfj//61Ua32WFRn78Fs5x/Gteg="></script>
+    "Zln6LtQ2s6d7IhyGdpswt6yAZOi9YqstyJBID1P+uR4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dモデル】リアラ","description":"Unity用オリジナルモデル、\n射撃競技銃メーカーE-Zインダストリの広告塔リアラちゃんです。\n\nUnityのHumanoid形式に対応したモデルデータ(主にVRChat向けを想定)を格納しています。\nパーツ分けされたpsdファイルを同梱しているため色変えや模様入れ等でお楽しみいただけます。\n\n動画・画像・ゲーム・VRアバター等、営利非営利問わず利用いただけます。\n\n■一部髪飾りのウェイトを修正しました。\n■全体的にウェイトを修正しました。","url":"https://booth.pm/ja/items/1009800","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/27054d27-6907-43b6-8fda-e7b408e9f7ab/i/1009800/98355760-f046-4c68-ae00-5bc143ee0552_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="4BOD71MsKPVmbYpSxtfj//61Ua32WFRn78Fs5x/Gteg="></script>
+    nonce="Zln6LtQ2s6d7IhyGdpswt6yAZOi9YqstyJBID1P+uR4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1009800/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               541
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1009800/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               541
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
