--- a/VRChat/60/1009060.html
+++ b/VRChat/60/1009060.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "4LtmvbueTLVnqIaLhiPBi73vLaNOrKZfLGTrvk8pnes="></script>
+    "yyBMUG5Z9RsKZsIQPiB16sMvNiQU4WfFC9yWCpliueM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchat向け3Dモデル】Rai-Rai【オキュラスクエスト対応】","description":"※2019年3月27日更新\n表情追加（眉上・眉下・眉怒り・眉困り）blenderで編集する際シェイプキーが読み込まれない問題を修正しました\n\n※2020年4月15日更新\nフルトラッキングにそこそこ対応\nオキュラスクエストに対応\nシェイプキー1種類追加\nボーンとウェイトの構造の見直し\nフードの耳部分のボーンの最適化\nshaderをまんまるしぇーだー3への更新\n\n※2020年4月16日更新\n4月15日に大幅なアップデートを加えたため、価格を変更\n\nVRchat用のモデルとなります。\nフルトラッキングにもそこそこ対応しておりますが、無理な体制になるとスカートを足が貫通する事があります。\n\n■入っている物\n・unityPackage\n・Material等セットアップ済のモデル\n※VRChatSDKを入れたプロジェクトに入れればすぐにアップロードできます。\n・表情ファイル\n※色は2パターン入っています。\n・フードの耳部分にボーンが入っております\n\n■やっていい事\n・VRchatでの使用\n・VRchatを使用した生放送の出演・撮影など\n・改変\n\n■禁止事項\n・モデル再配布（改造・未改造問わず）\n・政治的利用\n・他者を侮辱するような利用\n・他人を不快にさせる行為\n・本商品に含まれるデータを元にした商品を作る事\n・その他製作者が不適切と判断したもの\n※上記以外の使用については作者にお問い合わせください。\n\nこのモデルには @Mini_9321_VR 様作 まんまるしぇーだー3\n配布先：  https://miniscape.booth.pm/items/1627422 が使用されています。","url":"https://booth.pm/ja/items/1009060","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/9585a184-fff0-488e-8a9d-612c758951c2/i/1009060/21fbcf7a-9f73-41b2-9663-621bf1f7f8ce_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="4LtmvbueTLVnqIaLhiPBi73vLaNOrKZfLGTrvk8pnes="></script>
+    nonce="yyBMUG5Z9RsKZsIQPiB16sMvNiQU4WfFC9yWCpliueM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1009060/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               20
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1009060/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               20
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
